<resources>
    <string name="app_name">Kulakov_P4_Cryptocurrency_app</string>
    <string name="sign_in">Войти</string>
    <string name="searchableLang" translatable="false">en</string>

    <string name="all">Все</string>
    <string name="market_cap">Рыночная капитализация</string>
    <string name="volume_24h">Объем 24ч</string>
    <string name="added">Добавлено</string>
    <string name="updated">Обновлено</string>
    <string name="circulating">В обращении</string>
    <string name="total_supply">Общее количество</string>
    <string name="max_supply">Максимальное количество</string>
    <string name="cmc_rank">Рейтинг</string>
    <string name="num_market_pairs">Рыночные пары</string>
    <string name="tags">Теги</string>
    <string name="offline_message">Интернет соединение отсутсвует. Некоторые функции приложения отключены.</string>

    <string name="error">Ошибка</string>

    <string-array name="currency_data_table_header">
        <item>Название</item>
        <item>Значение</item>
    </string-array>

    <string-array name="currency_types">
        <item>@string/all</item>
        <item>Валюты</item>
        <item>Токены</item>
    </string-array>

    <string-array name="currency_tags">
        <item>@string/all</item>
        <item>DeFi</item>
        <item>Filesharing</item>
    </string-array>

    <string-array name="sort_types">
        <item>Название</item>
        <item>Символ</item>
        <item>Дата добавления</item>
        <item>@string/market_cap</item>
        <item>Цена</item>
    </string-array>

    <string-array name="sort_dirs">
        <item>По возрастанию</item>
        <item>По убыванию</item>
    </string-array>

    <string-array name="graph_labels">
        <item>90дн</item>
        <item>60дн</item>
        <item>30дн</item>
        <item>7дн</item>
        <item>24ч</item>
        <item>1ч</item>
        <item>сейчас</item>
    </string-array>

    <string-array name="settings_langs">
        <item>Русский</item>
        <item>English</item>
    </string-array>

    <string name="russian" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>

    <string-array name="settings_themes">
        <item>Светлая</item>
        <item>Темная</item>
    </string-array>

    <string name="no_data">Нет данных</string>
    <string name="cryptocurrency_icon">Иконка криптовалюты</string>
    <string name="buy_cryptocurrency">Купить криптовалюту</string>
    <string name="links">Ссылки</string>
    <string name="icon">Иконка</string>
    <string name="web_site">веб-сайт</string>
    <string name="tech_documentation">тех. документация</string>
    <string name="twitter">твиттер</string>
    <string name="reddit">реддит</string>
    <string name="message_board">доска сообщений</string>
    <string name="announcement">аннонсмент</string>
    <string name="chat">чат</string>
    <string name="explorer">проводник</string>
    <string name="source_code">исходный код</string>
    <string name="logo">Логотип</string>
    <string name="article_image">Картинка статьи</string>
    <string name="retry">Повторить</string>
    <string name="search_hint">Поиск…</string>
    <string name="main">Главная</string>
    <string name="news">Новости</string>
    <string name="converter">Конвертер</string>
    <string name="settings">Настройки</string>
    <string name="price">Цена</string>
    <string name="tag">Тег</string>
    <string name="cryptocurrency_type">Тип криптовалюты</string>
    <string name="sort_ad_filter">Сортировка и фильтр</string>
    <string name="language">Язык</string>
    <string name="theme">Тема</string>
    <string name="sign_out">Выйти из аккаунта</string>
    <string name="authorization">Авторизация</string>
    <string name="choose_currency">Выберите валюту</string>
    <string name="menu">Меню</string>
    <string name="favorite">Избранное</string>
    <string name="update_favorite">Обновить избранное</string>
    <string name="delete_from_favorite">Удалить из избранного</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="sort">Сортировка</string>
</resources>