<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:title="@string/main"
        android:icon="@drawable/ic_baseline_attach_money_24"/>
    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_star_24"/>
    <item
        android:id="@+id/newsFragment"
        android:title="@string/news"
        android:icon="@drawable/ic_news"/>
    <item
        android:id="@+id/converterFragment"
        android:title="@string/converter"
        android:icon="@drawable/ic_baseline_calculate_24"/>
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>
    <item
        android:id="@+id/signOutMenuItem"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_baseline_exit_to_app_24"/>
</menu>