<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.kulakov_p4_cryptocurrency_app.views.fragments.SignInFragment"
        android:label="@string/authorization"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.kulakov_p4_cryptocurrency_app.views.fragments.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_currencyDetailFragment"
            app:destination="@id/currencyDetailFragment">
            <argument
                android:name="currencyArg"
                app:argType="com.example.kulakov_p4_cryptocurrency_app.parcelable.CurrencyArg" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/currencyDetailFragment"
        android:name="com.example.kulakov_p4_cryptocurrency_app.views.fragments.CurrencyDetailFragment"
        android:label="CurrencyDetailFragment"
        tools:layout="@layout/fragment_currency_detail">
        <argument
            android:name="currencyArg"
            app:argType="com.example.kulakov_p4_cryptocurrency_app.parcelable.CurrencyArg" />
        <action
            android:id="@+id/action_currencyDetailFragment_to_webViewFragment"
            app:destination="@id/webViewFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="url"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/webViewFragment"
        android:name="com.example.kulakov_p4_cryptocurrency_app.views.fragments.WebViewFragment"
        android:label="WebViewFragment"
        tools:layout="@layout/fragment_webview">
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.kulakov_p4_cryptocurrency_app.views.fragments.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_newsFragment_to_webViewFragment"
            app:destination="@id/webViewFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="url"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/converterFragment"
        android:name="com.example.kulakov_p4_cryptocurrency_app.views.fragments.ConverterFragment"
        android:label="@string/converter"
        tools:layout="@layout/fragment_converter">
        <action
            android:id="@+id/action_converterFragment_to_currencyChoiceFragment"
            app:destination="@id/currencyChoiceFragment" />
    </fragment>
    <fragment
        android:id="@+id/currencyChoiceFragment"
        android:name="com.example.kulakov_p4_cryptocurrency_app.views.fragments.CurrencyChoiceFragment"
        android:label="@string/choose_currency" >
        <action
            android:id="@+id/action_currencyChoiceFragment_to_converterFragment"
            app:destination="@id/converterFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.kulakov_p4_cryptocurrency_app.views.fragments.SettingsFragment"
        android:label="@string/settings" >
        <action
            android:id="@+id/action_settingsFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.kulakov_p4_cryptocurrency_app.views.fragments.FavoriteFragment"
        android:label="@string/favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_currencyDetailFragment"
            app:destination="@id/currencyDetailFragment">
            <argument
                android:name="currencyArg"
                app:argType="com.example.kulakov_p4_cryptocurrency_app.parcelable.CurrencyArg" />
        </action>
    </fragment>
</navigation>