<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.kulakov_p4_cryptocurrency_app.view_models.SortFilterVM" />

        <variable
            name="isOnline"
            type="androidx.databinding.ObservableBoolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sort_filter_bg">

        <TextView
            android:id="@+id/header"
            style="@style/headerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sort_ad_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/typesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_indent"
            android:text="@string/cryptocurrency_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/typesSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_indent"
            android:drawSelectorOnTop="true"
            android:selectedItemPosition="@={viewModel.selectedTypePosition}"
            android:spinnerMode="dropdown"
            app:enabled="@{isOnline}"
            app:entries="@{@stringArray/currency_types}"
            app:layout_constraintStart_toStartOf="@id/typesTextView"
            app:layout_constraintTop_toBottomOf="@id/typesTextView" />


        <TextView
            android:id="@+id/tagsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_indent"
            android:text="@string/tag"
            app:layout_constraintStart_toStartOf="@+id/tagsSpinner"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/tagsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_indent"
            android:drawSelectorOnTop="true"
            android:selectedItemPosition="@={viewModel.selectedTagPosition}"
            android:spinnerMode="dropdown"
            app:entries="@{@stringArray/currency_tags}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tagsTextView" />


        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_indent"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tagsSpinner" />


        <com.google.android.material.slider.RangeSlider
            android:id="@+id/priceSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:valueFrom="@integer/value_min"
            android:valueTo="@integer/price_max"
            app:endValue="@={viewModel.priceMax}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceTextView"
            app:startValue="@={viewModel.priceMin}"
            app:values="@array/initial_price_slider_values" />

        <TextView
            android:id="@+id/marketCapTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_indent"
            android:text="@string/market_cap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceSlider" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/marketCapSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:valueFrom="@integer/value_min"
            android:valueTo="@integer/market_cap_max"
            app:endValue="@={viewModel.marketCapMax}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/marketCapTextView"
            app:startValue="@={viewModel.marketCapMin}"
            app:values="@array/initial_market_cap_slider_values" />

        <TextView
            android:id="@+id/sortTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_indent"
            android:text="@string/sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/marketCapSlider" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sortTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_indent"
            android:drawSelectorOnTop="true"
            android:selectedItemPosition="@={viewModel.selectedSortTypePosition}"
            android:spinnerMode="dropdown"
            app:entries="@{@stringArray/sort_types}"
            app:layout_constraintStart_toEndOf="@id/sortTextView"
            app:layout_constraintTop_toTopOf="@id/sortTextView" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sortDirSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_indent"
            android:drawSelectorOnTop="true"
            android:selectedItemPosition="@={viewModel.selectedSortDirPosition}"
            android:spinnerMode="dropdown"
            app:entries="@{@stringArray/sort_dirs}"
            app:layout_constraintStart_toStartOf="@id/sortTypeSpinner"
            app:layout_constraintTop_toBottomOf="@id/sortTypeSpinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>